--- a/index.html
+++ b/index.html
@@ -14,6 +14,10 @@
         <link rel="icon" href="assets/img/e.png"  type="image/png">
 
         <title>EDISON TKP</title>
+
+        <meta property="og:image" content="edisontkpcom.github.io/assets/img/e.png"/>  
+        <meta property="og:title" content="EDISON TKP "/>  
+        <meta property="og:description" content="EdisonTKP  is having over 10 Years software engineering experience.I am awarded in various of competition such as Maybank Hackathon 2016, Park of Future Hackathon 2018 (SG), GBEC Hackathon 2018, SiteCore Hackathon 2019, Atlashack 2021, etc. I am having IT experience from website applications, mobile applications to cloud computing and blockchain.I am joined various startup companies to build mobile applications, e-commerce, websites, internet of things for logistic, agriculture and e-commerce industries. I am well-versed in GPS tracking, custom map, bluetooth and computer vision data capturing technology."/>  
     </head>
     <body>
         <!-- HEADER -->
