--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
         <title>EDISON TKP</title>
 
         <meta property="og:image" content="https://edisontkpcom.github.io/assets/img/e.png"/>  
-        <meta property="og:title" content="EDISON TKP "/>  
-        <meta property="og:description" content="EdisonTKP is having over 10 Years software engineering experience.I am awarded in various of competition such as Maybank Hackathon 2016, Park of Future Hackathon 2018 (SG), GBEC Hackathon 2018, SiteCore Hackathon 2019, Atlashack 2021, etc. I am having IT experience from website applications, mobile applications to cloud computing and blockchain.I am joined various startup companies to build mobile applications, e-commerce, websites, internet of things for logistic, agriculture and e-commerce industries. I am well-versed in GPS tracking, custom map, bluetooth and computer vision data capturing technology."/>  
+        <meta property="og:title" content="Pao Chiam "/>  
+        <meta property="og:description" content="I'm new here"/>  
     </head>
     <body>
         <!-- HEADER -->
@@ -137,9 +137,9 @@
                                     <span class="education_line"></span>
                                 </div>
                                 <div class="education_data bd-grid">
-                                    <h3 class="education_title">BENG (HONOURS) Electrical and Electronic Engineering</h3>
-                                    <span class="education_studies">SHEFFIELD HALLAM UNIVERSITY</span>
-                                    <span class="education_year">2007 - 2010</span>
+                                    <h3 class="education_title">Bachelor Hons ( Degree) in Construction Management</h3>
+                                    <span class="education_studies">University Tunlu Abdul Rahman</span>
+                                    <span class="education_year">2013-2019</span>
                                 </div>
                             </div>
                             <div class="education_content">
@@ -148,9 +148,9 @@
                                     <span class="education_line"></span>
                                 </div>
                                 <div class="education_data bd-grid">
-                                    <h3 class="education_title">FOUNDATION IN ENGINEERING, SCIENCE AND TECHNOLOGY</h3>
-                                    <span class="education_studies">KOLEJ BANDAR UTAMA</span>
-                                    <span class="education_year">2006</span>
+                                    <h3 class="education_title">STPM</h3>
+                                    <span class="education_studies">SMK Desa Mahkota</span>
+                                    <span class="education_year">2013</span>
                                 </div>
                             </div>
                         </div>
@@ -202,14 +202,12 @@
                                 </div>
  
                                 <div class="experience_data bd-grid">
-                                    <h3 class="experience_title">Blockchain Trainer</h3>
-                                    <span class="experience_company">Oct 2021 - Till Now | <a href="https://chains.my">Chains.my</a> </span>
+                                    <h3 class="experience_title">Assistant Store Manager</h3>
+                                    <span class="experience_company">Nov2022-May 2024 | <a href="https://chains.my">Chains.my</a> </span>
                                     <p class="experience_description">
-                                        - Create and deliver training courses covering various aspects of blockchain technology, including blockchain architecture, consensus algorithms, smart contracts, and more.<br/>
-                                        - Foster a collaborative learning environment by engaging with students through interactive lectures, hands-on projects, and group discussions.
-                                        Assess students' progress, offer feedback and support to help them achieve their goals.<br/>
-                                        - Stay up to date with the latest trends and developments in blockchain technology and integrate this knowledge into your training.<br/>
-                                        - Collaborate with other trainers and the staffs of Education Providers to continuously enhance the quality of the Professional Diploma in Blockchain Technology program.
+                                        -Prepare paperwork for dtore operation。＜br/>
+                                        -Operation store. <br/>
+                                        -Improve sales.
                                     </p>
                                 </div>
                             </div>
@@ -222,7 +220,6 @@
                             <div class="certificate_content">
                                 <h3 class="certificate_title">Top 10 Packhack </h3>
                                 <p class="certificate_description">
-                                   Our team developed app to detect scam call by ChatGPT to solve challenge 1 about Security and Fraud.
                                 </p>
                             </div>  
                         </div>
@@ -236,8 +233,8 @@
                                 <h3 class="references_title">Instagram</h3>
                                 <ul class="references_contact">
                                     <li>username:  @edisontkp</li>
-                                    <li>click here ▼ <a href="https://www.instagram.com/edisontkp/" target="_blank" class="social_link">
-                                        <i class='fa fa-instagram' style='color: red'></i> https://www.instagram.com/edisontkp/
+                                    <li>click here ▼ <a href="https://www.instagram.com/paochiam/" target="_blank" class="social_link">
+                                        <i class='fa fa-instagram' style='color: red'></i> https://www.instagram.com/paochiam/
                                     </a></li>
                                 </ul>
                             </div>
