--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
         <title>EDISON TKP</title>
 
-        <meta property="og:image" content="https://edisontkpcom.github.io/assets/img/e.png"/>  
+        <meta property="og:image" content="https://paochiam.github.io/assets/img/e.png"/>  
         <meta property="og:title" content="Pao Chiam "/>  
         <meta property="og:description" content="I'm new here"/>  
     </head>
@@ -136,7 +136,7 @@
                                 <div class="education_data bd-grid">
                                     <h3 class="education_title">Bachelor Hons ( Degree) in Construction Management</h3>
                                     <span class="education_studies">University Tunlu Abdul Rahman</span>
-                                    <span class="education_year">2013-2019</span>
+                                    <span class="education_year">2015-2019</span>
                                 </div>
                             </div>
                             <div class="education_content">
