--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <!-- Favicon -->
         <link rel="icon" href="assets/img/e.png"  type="image/png">
 
-        <title>EDISON TKP</title>
+        <title>Pao Chiam</title>
 
         <meta property="og:image" content="https://paochiam.github.io/assets/img/e.png"/>  
         <meta property="og:title" content="Pao Chiam "/>  
@@ -77,12 +77,12 @@
                     <section class="home" id="home">
                         <div class="home_containter section bd-grid">
                             <div class="home_data bd-grid">
-                                <img src="assets/img/edison.jpg" alt="" class="home_img center">
-                                <h1 class="home_title">Edison <b>TKP</b></h1>
+                                <img src="assets/img/paochiam.jpg" alt="" class="home_img center">
+                                <h1 class="home_title">Pao<b>Chiam</b></h1>
                                 <h3 class="home_profession">App Developer</h3>
                                 <!-- Button to generate and download the pdf. Available for desktop. -->
                                 <div>
-                                    <a download="" href="assets/pdf/edisontkp.pdf" class="home_button-movil">Download</a>
+                                    <a download="" href="assets/pdf/paochiam.pdf" class="home_button-movil">Download</a>
                                 </div>
                             </div>
                             <div class="home_address bd-grid">
@@ -90,7 +90,7 @@
                                     <i class="bx bx-map"> &nbsp; </i> Greater Kuala Lumpur, Malaysia 
                                 </span>
                                 <span class="home_information">
-                                    <i class="bx bx-envelope"> &nbsp; </i> im@edisontkp.com
+                                    <i class="bx bx-envelope"> &nbsp; </i> paochiamwong@gmail.com
                                 </span>
                                 <span class="home_information">
                                     <i class="bx bx-phone"> &nbsp; </i> +6017 321****
