--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                             <div class="home_data bd-grid">
                                 <img src="assets/img/paochiam.jpg" alt="" class="home_img center">
                                 <h1 class="home_title">Pao<b>Chiam</b></h1>
-                                <h3 class="home_profession">App Developer</h3>
+                                <h3 class="home_profession">Blockchain Consultant</h3>
                                 <!-- Button to generate and download the pdf. Available for desktop. -->
                                 <div>
                                     <a download="" href="assets/pdf/paochiam.pdf" class="home_button-movil">Download</a>
