--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
                                 </div>
                                 <div class="education_data bd-grid">
                                     <h3 class="education_title">Bachelor Hons ( Degree) in Construction Management</h3>
-                                    <span class="education_studies">University Tunlu Abdul Rahman</span>
+                                    <span class="education_studies">University Tunku Abdul Rahman</span>
                                     <span class="education_year">2015-2019</span>
                                 </div>
                             </div>
