--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
                                     <h3 class="experience_title"></h3>
                                     <span class="experience_company"> | <a href="https://chains.my">Chains.my</a> </span>
                                     <p class="experience_description">
-                                        -Prepare paperwork for dtore operation。＜br/>
+                                        -Prepare paperwork for store operation。＜br/>
         
                                     </p>
                                 </div>
