--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                     <section class="home" id="home">
                         <div class="home_containter section bd-grid">
                             <div class="home_data bd-grid">
-                                <img src="assets/img/paochiam.jpg" alt="" class="home_img center">
+                                <img src="assets/img/pao.png" alt="" class="home_img center">
                                 <h1 class="home_title">Pao<b>Chiam</b></h1>
                                 <h3 class="home_profession">Blockchain Consultant</h3>
                                 <!-- Button to generate and download the pdf. Available for desktop. -->
