--- a/index.html
+++ b/index.html
@@ -34,8 +34,9 @@
                         <li class="nav_item">
                             <a href="#profile" class="nav_link">
                                 <i class='bx bx-user nav_icon'></i>Profile
+                                <i class='bx bx-briefcase-alt nav_icon'></i> As a student in Management & Science University's (MSU) esteemed diploma program in blockchain technology, I bring a wealth of knowledge and expertise to the world of blockchain consultancy. Equipped with a comprehensive understanding of blockchain fundamentals, smart contracts, decentralized finance (DeFi), and cryptocurrency ecosystems, I am primed to offer strategic guidance and innovative solutions to businesses seeking to harness the power of blockchain technology.
                             </a>
-                        </li>
+                            </li>
                         <li class="nav_item">
                             <a href="#education" class="nav_link">
                                 <i class='bx bx-book nav_icon'></i>Education
@@ -119,9 +120,9 @@
                     <!-- PROFILE -->
                     <section class="profile section" id="profile">
                         <h2 class="section-title">Profile</h2>
-                        <p class="profile_description">
+                        <p class="profile_description">As a student Management & Science University's esteemed diploma program in blockchain technology, I bring a wealth of knowledge and expertise to the world of blockchain consultancy. Equipped with a comprehensive understanding of blockchain fundamentals, smart contracts, decentralized finance (DeFi), and cryptocurrency ecosystems, I am primed to offer strategic guidance and innovative solutions to businesses seeking to harness the power of blockchain technology.
                         
-                        </p>
+                     </p>
                     </section>
                     
                     <!-- EDUCATION -->
@@ -132,6 +133,11 @@
                                 <div class="education_time">
                                     <span class="education_rounder"></span>
                                     <span class="education_line"></span>
+                                </div>
+                                <div class="education_data bd-grid">
+                                    <h3 class="education_title">Diploma Blockchain Technology </h3>
+                                    <span class="education_studies">MSU</span>
+                                    <span class="education_year">Now</span>
                                 </div>
                                 <div class="education_data bd-grid">
                                     <h3 class="education_title">Bachelor Hons ( Degree) in Construction Management</h3>
