--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <link rel="stylesheet" href="assets/css/styles.css">
 
         <!-- Favicon -->
-        <link rel="icon" href="assets/img/e.png"  type="image/png">
+        <link rel="icon" href="assets/img/logo.png"  type="image/png">
 
         <title>Pao Chiam</title>
 
