--- a/index.html
+++ b/index.html
@@ -139,6 +139,7 @@
                                     <span class="education_studies">MSU</span>
                                     <span class="education_year">Now</span>
                                 </div>
+                            </div>    
                                 <div class="education_data bd-grid">
                                     <h3 class="education_title">Bachelor Hons ( Degree) in Construction Management</h3>
                                     <span class="education_studies">University Tunku Abdul Rahman</span>
