edu round and slight amend

--- a/index.html
+++ b/index.html
@@ -140,6 +140,11 @@
                                     <span class="education_year">Now</span>
                                 </div>
                             </div>    
+                            <div class="education_content">
+                                <div class="education_time">
+                                    <span class="education_rounder"></span>
+                                    <span class="education_line"></span>
+                                </div>
                                 <div class="education_data bd-grid">
                                     <h3 class="education_title">Bachelor Hons ( Degree) in Construction Management</h3>
                                     <span class="education_studies">University Tunku Abdul Rahman</span>
@@ -193,7 +198,6 @@
                             </ul>
                         </div>
                     </section>
-                </div>
                 <div class="resume__right">
                     <!-- EXPERIENCE -->
                     <section class="experience section" id="experience">
