--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
                                     <p class="experience_description">
                                         -Ensure quality and quantity of product fufill customer requirement.<br/>
                                         -Arrange staff and driver for operation of the day.<br/>
-                                        -Maintain plant to ensure the plant is in good condition and hab=ve enough material for production.
+                                        -Maintain plant to ensure the plant is in good condition and have enough material for production.
                                     </p>
                                 </div>
                             </div>
