--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
                                     </p>
                                 </div>
                             </div>
-                            div class="experience_container bd-grid">
+                            <div class="experience_container bd-grid">
                             <div class="experience_content">
                                 <div class="experience_time">
                                     <span class="experience_rounder"></span>
