--- a/index.html
+++ b/index.html
@@ -125,6 +125,7 @@
                     </section>
                     
                     <!-- EDUCATION -->
+                    <div class="resume__left">
                     <section class="education section" id="education">
                         <h2 class="section-title">Education</h2>
                         <div class="education_container bd-grid">
@@ -163,7 +164,9 @@
                             </div>
                         </div>
                     </section>
+                    </div>
                     <!-- SKILLS  -->
+                    <div class="resume__left">
                     <section class="skills section" id="skills">
                         <h2 class="section-title">Skills</h2>
                         <div class="skills_content bd-grid">
@@ -197,6 +200,7 @@
                             </ul>
                         </div>
                     </section>
+                    </div>
                 <div class="resume__right">
                     <!-- EXPERIENCE -->
                     <section class="experience section" id="experience">
