--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
                     </section>
                     
                     <!-- EDUCATION -->
-                    <div class="resume__left">
+                    <div class="resume__right">
                     <section class="education section" id="education">
                         <h2 class="section-title">Education</h2>
                         <div class="education_container bd-grid">
@@ -166,7 +166,7 @@
                     </section>
                     </div>
                     <!-- SKILLS  -->
-                    <div class="resume__left">
+                    <div class="resume__right">
                     <section class="skills section" id="skills">
                         <h2 class="section-title">Skills</h2>
                         <div class="skills_content bd-grid">
