--- a/index.html
+++ b/index.html
@@ -123,7 +123,9 @@
                             As a student Management & Science University's esteemed diploma program in blockchain technology, I bring a wealth of knowledge and expertise to the world of blockchain consultancy. Equipped with a comprehensive understanding of blockchain fundamentals, smart contracts, decentralized finance (DeFi), and cryptocurrency ecosystems, I am primed to offer strategic guidance and innovative solutions to businesses seeking to harness the power of blockchain technology.
                      </p>
                     </section>
-                    
+                </div>
+            <div class="resume" id="area-cv">
+            <div class="resume__right">        
                     <!-- EDUCATION -->
                     <div class="resume__right">
                     <section class="education section" id="education">
