--- a/index.html
+++ b/index.html
@@ -182,23 +182,6 @@
                                 <li class="skills_name">
                                     <span class="skills_circle"></span> GIT
                                 </li>
-                                <li class="skills_name">
-                                    <span class="skills_circle"></span> 
-                                </li>
-                            </ul>
-                            <ul class="skills_data">
-                                <li class="skills_name">
-                                    <span class="skills_circle"></span>
-                                </li>
-                                <li class="skills_name">
-                                    <span class="skills_circle"></span>
-                                </li>
-                                <li class="skills_name">
-                                    <span class="skills_circle"></span>
-                                </li>
-                                <li class="skills_name">
-                                    <span class="skills_circle"></span>
-                                </li>
                             </ul>
                         </div>
                     </section>
@@ -216,7 +199,7 @@
  
                                 <div class="experience_data bd-grid">
                                     <h3 class="experience_title">YNC Enterprice(7-11)</h3>
-                                    <span class="experience_company">2023-2024 | <a href="https://chains.my">Chains.my</a> </span>
+                                    <span class="experience_company">2023-2024 | </span>
                                     <p class="experience_description">
                                         -Prepare paperwork for store operation.＜br/>
                                         -Improving sales of store.<br/>
@@ -233,7 +216,7 @@
  
                                 <div class="experience_data bd-grid">
                                     <h3 class="experience_title">Pan United Pte Ltd</h3>
-                                    <span class="experience_company">2019-2021 | <a href="https://chains.my">Chains.my</a> </span>
+                                    <span class="experience_company">2019-2021 | </span>
                                     <p class="experience_description">
                                         -Ensure quality and quantity of product fufill customer requirement.<br/>
                                         -Arrange staff and driver for operation of the day.<br/>
