--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
                                     <h3 class="experience_title">YNC Enterprice(7-11)</h3>
                                     <span class="experience_company">2023-2024 | </span>
                                     <p class="experience_description">
-                                        -Prepare paperwork for store operation.＜br/>
+                                        -Prepare paperwork for store operation. <br/>
                                         -Improving sales of store.<br/>
                                         -Interview, employ and training staff to fulfill operation standard.
                                     </p>
@@ -224,17 +224,6 @@
                                     </p>
                                 </div>
                             </div>
-                        </div>
-                    </section>
-                    <!-- CERTIFICATES -->
-                    <section class="certificate section" id="certificate">
-                        <h2 class="section-title">Awards</h2>
-                        <div class="certificate_container bd-grid">
-                            <div class="certificate_content">
-                                <h3 class="certificate_title"> </h3>
-                                <p class="certificate_description">
-                                </p>
-                            </div>  
                         </div>
                     </section>
                     <!-- REFERENCES -->
