--- a/index2.html
+++ b/index2.html
@@ -151,6 +151,24 @@
                         </div>
                     </div>
                 </section>
+                
+                <section class="achievements section">
+                    <h2 class="section-title">Projects</h2>
+                    <div class="achievements_container bd-grid">
+                        <div class="achievements_content">
+                            <h3 class="achievements_title">1st Runner Up in Halal Tech Challenge 2014</h3>
+                            <p class="achievements_description">Awarded for innovative solutions in the field of Halal technology.</p>
+                        </div>
+                        <div class="achievements_content">
+                            <h3 class="achievements_title">2nd Prize in Flutter Hackathon 2019</h3>
+                            <p class="achievements_description">Achieved second place for developing a cutting-edge Flutter application.</p>
+                        </div>
+                        <div class="achievements_content">
+                            <h3 class="achievements_title">Hackatron Asia 2014</h3>
+                            <p class="achievements_description">1st Runner Up for creating innovative solutions for the Yotaphone Challenge.</p>
+                        </div>
+                    </div>
+                </section>
 
                 <section class="references section" id="references">
                     <h2 class="section-title">References</h2>
@@ -204,23 +222,7 @@
                     </div>
                 </section>
 
-                <section class="achievements section">
-                    <h2 class="section-title">Achievements</h2>
-                    <div class="achievements_container bd-grid">
-                        <div class="achievements_content">
-                            <h3 class="achievements_title">1st Runner Up in Halal Tech Challenge 2014</h3>
-                            <p class="achievements_description">Awarded for innovative solutions in the field of Halal technology.</p>
-                        </div>
-                        <div class="achievements_content">
-                            <h3 class="achievements_title">2nd Prize in Flutter Hackathon 2019</h3>
-                            <p class="achievements_description">Achieved second place for developing a cutting-edge Flutter application.</p>
-                        </div>
-                        <div class="achievements_content">
-                            <h3 class="achievements_title">Hackatron Asia 2014</h3>
-                            <p class="achievements_description">1st Runner Up for creating innovative solutions for the Yotaphone Challenge.</p>
-                        </div>
-                    </div>
-                </section>
+                
 
                 <section class="training section">
                     <h2 class="section-title">Training & Workshops</h2>
