--- a/index2.html
+++ b/index2.html
@@ -156,17 +156,35 @@
                     <h2 class="section-title">Projects</h2>
                     <div class="achievements_container bd-grid">
                         <div class="achievements_content">
-                            <h3 class="achievements_title">1st Runner Up in Halal Tech Challenge 2014</h3>
-                            <p class="achievements_description">Awarded for innovative solutions in the field of Halal technology.</p>
+                            <h3 class="achievements_title">Chili Grading App</h3>
+                            <p class="achievements_description">Developed a mobile app that uses image processing and machine learning to grade chili
+                                peppers based on characteristics like color and size. This app enables users to capture or
+                                upload images, which are then analyzed by Firebase ML Kit to provide a grade for the chili.
+                                The grading criteria can be customized for industry-specific needs, such as agriculture or
+                                quality control.</p>
                         </div>
                         <div class="achievements_content">
-                            <h3 class="achievements_title">2nd Prize in Flutter Hackathon 2019</h3>
-                            <p class="achievements_description">Achieved second place for developing a cutting-edge Flutter application.</p>
+                            <h3 class="achievements_title">Compleye System</h3>
+                            <p class="achievements_description">A real-time detection system for physical compliance is designed to monitor and ensure
+                                that individuals or processes adhere to certain physical standards or safety protocols. This
+                                system typically involves a combination of sensors, computer vision, and machine learning
+                                technologies to detect compliance in real-time and alert relevant personnel when noncompliance
+                                is detected.</p>
                         </div>
                         <div class="achievements_content">
-                            <h3 class="achievements_title">Hackatron Asia 2014</h3>
-                            <p class="achievements_description">1st Runner Up for creating innovative solutions for the Yotaphone Challenge.</p>
+                            <h3 class="achievements_title">Custom LLM for Industry-Specific Knowledge</h3>
+                            <p class="achievements_description">Fine-tuned an LLM for sector-specific applications, such as legal and healthcare, to assist
+                                professionals in drafting documents and analyzing case data.</p>
                         </div>
+                        <div class="achievements_content">
+                            <h3 class="achievements_title">ERC20 Token Generator</h3>
+                            <p class="achievements_description">Developed a generator for creating ERC20 tokens on the Ethereum blockchain without requiring
+                                programming expertise. The tool allows users to input token parameters such as name, symbol,
+                                total supply, and decimal places. It automates the deployment of ERC20 smart contracts while
+                                ensuring compliance with the ERC20 token standard. The generator includes security features
+                                like minting restrictions and token burning, making it suitable for a variety of use cases,
+                                including ICOs, reward systems, and digital assets.</p>
+                        </div>                      
                     </div>
                 </section>
 
