--- a/index2.html
+++ b/index2.html
@@ -101,12 +101,18 @@
                             <li class="skills_name"><span class="skills_circle"></span> Java</li>
                             <li class="skills_name"><span class="skills_circle"></span> Blockchain</li>
                             <li class="skills_name"><span class="skills_circle"></span> HTML/CSS</li>
+                            <li class="skills_name"><span class="skills_circle"></span> NodeJS</li>
+                            <li class="skills_name"><span class="skills_circle"></span> Flutter</l>
+                            <li class="skills_name"><span class="skills_circle"></span> Wordpress</l>
                         </ul>
                         <ul class="skills_data">
                             <li class="skills_name"><span class="skills_circle"></span> TensorFlow</li>
                             <li class="skills_name"><span class="skills_circle"></span> React</li>
                             <li class="skills_name"><span class="skills_circle"></span> AWS Cloud</li>
                             <li class="skills_name"><span class="skills_circle"></span> Web3/DApp Development</li>
+                            <li class="skills_name"><span class="skills_circle"></span> TypeScript</li>
+                            <li class="skills_name"><span class="skills_circle"></span> AWS Cloud</li>
+                            <li class="skills_name"><span class="skills_circle"></span> Azure Cloud</li>
                         </ul>
                     </div>
                 </section>
