--- a/index.html
+++ b/index.html
@@ -99,31 +99,6 @@
                         <!-- Button to generate and download the pdf. Available for desktop -->
                         <i class="bx bx-download generate-pdf" title="Generate PDF" id="resume-button"></i>
                     </section>          
-                    
-                    <!-- SOCIAL -->
-                    <section class="social section">
-                        <h2 class="section-title">SOCIAL</h2>
-                        <div class="social_container bd-grid">
-                            <a href="https://www.linkedin.com/in/wong-pao-chiam-718588181/" target="_blank" class="social_link">
-                                <i class="bx bxl-linkedin-square social_icon"></i> @Wong Pao Chiam
-                            </a>
-                            <a href="https://github.com/paochiam/" target="_blank" class="social_link">
-                                <i class="bx bxl-github social_icon"></i> @paochiam
-                            </a>
-                        </div>
-                    </section>
-                    <!-- PROFILE -->
-                    <section class="profile section" id="profile">
-                        <h2 class="section-title">Profile</h2>
-                        <p class="profile_description">
-                            As a student Management & Science University's esteemed diploma program in blockchain technology, I bring a wealth of knowledge and expertise to the world of blockchain consultancy. Equipped with a comprehensive understanding of blockchain fundamentals, smart contracts, decentralized finance (DeFi), and cryptocurrency ecosystems, I am primed to offer strategic guidance and innovative solutions to businesses seeking to harness the power of blockchain technology.
-                     </p>
-                    </section>
-                </div>
-            <div class="resume" id="area-cv">
-            <div class="resume__right">        
-                    <!-- EDUCATION -->
-                    <div class="resume__right">
                     <section class="education section" id="education">
                         <h2 class="section-title">Education</h2>
                         <div class="education_container bd-grid">
@@ -163,6 +138,23 @@
                         </div>
                     </section>
                     </div>
+                    
+                    <!-- SOCIAL -->
+                    <section class="social section">
+                        <h2 class="section-title">SOCIAL</h2>
+                        <div class="social_container bd-grid">
+                            <a href="https://www.linkedin.com/in/wong-pao-chiam-718588181/" target="_blank" class="social_link">
+                                <i class="bx bxl-linkedin-square social_icon"></i> @Wong Pao Chiam
+                            </a>
+                            <a href="https://github.com/paochiam/" target="_blank" class="social_link">
+                                <i class="bx bxl-github social_icon"></i> @paochiam
+                            </a>
+                        </div>
+                    </section>
+            <div class="resume" id="area-cv">
+            <div class="resume__right">        
+                    <!-- EDUCATION -->
+                    <div class="resume__right">
                     <!-- SKILLS  -->
                     <div class="resume__right">
                     <section class="skills section" id="skills">
@@ -182,7 +174,7 @@
                         </div>
                     </section>
                     </div>
-                <div class="resume__right">
+                <div class="resume__left">
                     <!-- EXPERIENCE -->
                     <section class="experience section" id="experience">
                         <h2 class="section-title">Experience</h2>
@@ -221,6 +213,19 @@
                                 </div>
                             </div>
                         </div>
+
+                    </section>
+                    </div>
+                    <div class="resume__right">
+                                            <!-- PROFILE -->
+                    <section class="profile section" id="profile">
+                        <h2 class="section-title">Profile</h2>
+                        <p class="profile_description">
+                            As a student Management & Science University's esteemed diploma program in blockchain technology, I bring a wealth of knowledge and expertise to the world of blockchain consultancy. Equipped with a comprehensive understanding of blockchain fundamentals, smart contracts, decentralized finance (DeFi), and cryptocurrency ecosystems, I am primed to offer strategic guidance and innovative solutions to businesses seeking to harness the power of blockchain technology.
+                     </p>
+                    </section>
+                    </div>
+
                     </section>
                     <!-- REFERENCES -->
                     <section class="references section" id="references">
