--- a/index.html
+++ b/index.html
@@ -253,7 +253,7 @@
                     <div class="training_container bd-grid">
                         <div class="training_content">
                             <h3 class="training_title">Trainer for UMP and MSU</h3>
-                            <p class="training_description">Conducted training under the Professional Diploma in Blockchain Technology since October 2021.</p>
+                            <p class="training_description">Conducted training under the Professional Diploma in Blockchain Technology.</p>
                         </div>
                         <div class="training_content">
                             <h3 class="training_title">Web3 Workshop</h3>
