Enhance styles and functionality: update image styles, add profile image, and improve JavaScript for menu interactions. Update index.html with new meta description and profile image.

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <meta property="og:image" content="https://edisontkpcom.github.io/assets/img/e.png"/>  
     <meta property="og:title" content="EDISON TKP"/>  
     <meta property="og:description" content="More than 10 years of experience in designing, developing, integrating, and supporting corporate tools and applications. Recognized for excellence in competitive environments and extensive teaching experience in blockchain and AI."/>  
+    <meta name="description" content="Resume & portfolio of Edison TKP – software development manager with experience in AI, blockchain, cloud, and full stack engineering."/>
 </head>
 <body>
     <header class="l-header" id="header">
@@ -38,9 +39,9 @@
                 <section class="home" id="home">
                     <div class="home_containter section bd-grid">
                         <div class="home_data bd-grid">
-                            <img src="assets/img/edison.jpg" alt="" class="home_img center">
+                            <img src="assets/img/edisontkp-profile.jpg" alt="Portrait of Edison TKP" class="home_img center">
                             <h1 class="home_title">Edison <b>TKP</b></h1>
-                            <h3 class="home_profession">Software Development Manager</h3>
+                            <h3 class="home_profession">Software Development Manager / Full Stack Architect</h3>
                             <div>
                                 <a download="" href="assets/pdf/edisontkp.pdf" class="home_button-movil">Download</a>
                             </div>
@@ -58,9 +59,9 @@
                 <section class="social section">
                     <h2 class="section-title">SOCIAL</h2>
                     <div class="social_container bd-grid">
-                        <a href="https://www.linkedin.com/in/edisontkp/" target="_blank" class="social_link"><i class="bx bxl-linkedin-square social_icon"></i> @edisontkp</a>
-                        <a href="https://github.com/edisontkpcom/" target="_blank" class="social_link"><i class="bx bxl-github social_icon"></i> @edisontkpcom</a>
-                        <a href="https://twitter.com/edisontkp" target="_blank" class="social_link"><i class="bx bxl-twitter social_icon"></i> @edisontkp</a>
+                        <a href="https://www.linkedin.com/in/edisontkp/" target="_blank" rel="noopener" class="social_link"><i class="bx bxl-linkedin-square social_icon"></i> @edisontkp</a>
+                        <a href="https://github.com/edisontkpcom/" target="_blank" rel="noopener" class="social_link"><i class="bx bxl-github social_icon"></i> @edisontkpcom</a>
+                        <a href="https://twitter.com/edisontkp" target="_blank" rel="noopener" class="social_link"><i class="bx bxl-twitter social_icon"></i> @edisontkp</a>
                     </div>
                 </section>
 
@@ -102,8 +103,8 @@
                             <li class="skills_name"><span class="skills_circle"></span> Blockchain</li>
                             <li class="skills_name"><span class="skills_circle"></span> HTML/CSS</li>
                             <li class="skills_name"><span class="skills_circle"></span> NodeJS</li>
-                            <li class="skills_name"><span class="skills_circle"></span> Flutter</l>
-                            <li class="skills_name"><span class="skills_circle"></span> Wordpress</l>
+                            <li class="skills_name"><span class="skills_circle"></span> Flutter</li>
+                            <li class="skills_name"><span class="skills_circle"></span> Wordpress</li>
                         </ul>
                         <ul class="skills_data">
                             <li class="skills_name"><span class="skills_circle"></span> TensorFlow</li>
@@ -111,8 +112,8 @@
                             <li class="skills_name"><span class="skills_circle"></span> AWS Cloud</li>
                             <li class="skills_name"><span class="skills_circle"></span> Web3/DApp Development</li>
                             <li class="skills_name"><span class="skills_circle"></span> TypeScript</li>
-                            <li class="skills_name"><span class="skills_circle"></span> AWS Cloud</li>
                             <li class="skills_name"><span class="skills_circle"></span> Azure Cloud</li>
+                            <li class="skills_name"><span class="skills_circle"></span> GCP Cloud</li>
                         </ul>
                     </div>
                 </section>
